@@ -329,10 +329,10 @@ TkWmMapWindow(
 	/*
 	 * Create the underlying Mac window for this Tk window.
 	 */
-	macWin = (MacDrawable *) winPtr->window;
 	if (!TkMacOSXHostToplevelExists(winPtr)) {
 	    TkMacOSXMakeRealWindowExist(winPtr);
 	}
+	macWin = (MacDrawable *) winPtr->window;
 
 	/*
 	 * Generate configure event when we first map the window.
@@ -2458,7 +2458,7 @@ WmResizableCmd(tkwin, winPtr, interp, objc, objv)
     Tcl_Obj *CONST objv[];	/* Argument objects. */
 {
     register WmInfo *wmPtr = winPtr->wmInfoPtr;
-    int width, height;
+    int width, height, oldAttributes;
 
     if ((objc != 3) && (objc != 5)) {
         Tcl_WrongNumArgs(interp, 2, objv, "window ?width height?");
@@ -2477,6 +2477,7 @@ WmResizableCmd(tkwin, winPtr, interp, objc, objv)
         || (Tcl_GetBooleanFromObj(interp, objv[4], &height) != TCL_OK)) {
         return TCL_ERROR;
     }
+    oldAttributes = wmPtr->attributes;
     if (width) {
         wmPtr->flags &= ~WM_WIDTH_NOT_RESIZABLE;
         wmPtr->attributes |= kWindowHorizontalZoomAttribute;
@@ -2491,9 +2492,6 @@ WmResizableCmd(tkwin, winPtr, interp, objc, objv)
         wmPtr->flags |= WM_HEIGHT_NOT_RESIZABLE;
         wmPtr->attributes &= ~kWindowVerticalZoomAttribute;
     }
-    /*
-     * XXX: Need a ChangeWindowAttributes
-     */
     if (width || height) {
         wmPtr->attributes |= kWindowResizableAttribute;
     } else {
@@ -2505,6 +2503,18 @@ WmResizableCmd(tkwin, winPtr, interp, objc, objv)
 		wmPtr->scrollWinPtr->instanceData);
     }
     WmUpdateGeom(wmPtr, winPtr);
+    if (wmPtr->attributes != oldAttributes) {
+	if (winPtr->window == None) {
+	    Tk_MakeWindowExist((Tk_Window) winPtr);
+	}
+	if (!TkMacOSXHostToplevelExists(winPtr)) {
+	    TkMacOSXMakeRealWindowExist(winPtr);
+	}
+	ChangeWindowAttributes(
+		GetWindowFromPort(TkMacOSXGetDrawablePort(winPtr->window)),
+		wmPtr->attributes & (wmPtr->attributes ^ oldAttributes),
+		oldAttributes & (wmPtr->attributes ^ oldAttributes));
+    }
     return TCL_OK;
 }
 
