@@ -1,3 +1,8 @@
+2006-04-09  Daniel Steffen  <das@users.sourceforge.net>
+
+	* macosx/tkMacOSXWm.c (WmResizableCmd): propagate window attribute
+	changes to Carbon window manager. [FR 1467004]
+
 2006-04-07  Daniel Steffen  <das@users.sourceforge.net>
 
 	*** 8.5a4 TAGGED FOR RELEASE ***
